samples/_failures_safe/1761045181_4b6c74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_631b53d1.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_631b53d1.c:164:32: error: missing terminating " character
  164 |         case TOKEN_EOF: printf("
      |                                ^
./samples/SAFE/__tmp_631b53d1.c:164:9: error: expected expression at end of input
  164 |         case TOKEN_EOF: printf("
      |         ^~~~
./samples/SAFE/__tmp_631b53d1.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_631b53d1.c:164:9: error: expected declaration or statement at end of input
